name:                 SoOSiM-components
version:              0.1.0.0
synopsis:             S(o)OS Components
-- description:
homepage:             http://soos-project.eu/
license:              BSD3
license-file:         LICENSE
author:               Christiaan Baaij
maintainer:           christiaan.baaij@gmail.com
-- copyright:
category:             Simulation
build-type:           Simple
cabal-version:        >=1.10

Extra-source-files:   README.md

Data-files:           examples/example1.json

source-repository head
  type: git
  location: git://github.com/christiaanb/SoOSiM-components.git

library
  HS-Source-Dirs:     src
  default-language:   Haskell2010
  ghc-options:        -fwarn-tabs
  Cpp-options:        -DCABAL

  exposed-modules:    SoOSiM.Components.ApplicationHandler
                      SoOSiM.Components.Common
                      SoOSiM.Components.ProcManager
                      SoOSiM.Components.ResourceDescriptor
                      SoOSiM.Components.ResourceManager
                      SoOSiM.Components.Scheduler
                      SoOSiM.Components.SoOSApplicationGraph
                      SoOSiM.Components.Thread

                      SoOSiM.Examples.Example1

  other-modules:      SoOSiM.Components.ApplicationHandler.Behaviour
                      SoOSiM.Components.ApplicationHandler.Interface
                      SoOSiM.Components.ApplicationHandler.Types

                      SoOSiM.Components.ProcManager.Behaviour
                      SoOSiM.Components.ProcManager.Interface
                      SoOSiM.Components.ProcManager.Types

                      SoOSiM.Components.ResourceManager.Behaviour
                      SoOSiM.Components.ResourceManager.Interface
                      SoOSiM.Components.ResourceManager.Types

                      SoOSiM.Components.Scheduler.Behaviour
                      SoOSiM.Components.Scheduler.Interface
                      SoOSiM.Components.Scheduler.Types

                      SoOSiM.Components.Thread.Behaviour
                      SoOSiM.Components.Thread.Interface
                      SoOSiM.Components.Thread.Types

                      SoOSiM.Examples.Loader
                      SoOSiM.Examples.Parser

                      Paths_SoOSiM_components

  build-depends:      aeson                >= 0.6.0.2,
                      base                 >= 4.3.1.0,
                      bytestring           >= 0.10.0.0,
                      containers           >= 0.5.0.0,
                      filepath             >= 1.3.0.1,
                      lens                 >= 3.7.0.2,
                      mtl                  >= 2.1.2,
                      SoOSiM               >= 0.2.4.0,
                      stm                  >= 2.4.2,
                      transformers         >= 0.3.0.0,
                      unordered-containers >= 0.2.2.1
